[package]
name = "upload_svc"
version = "0.1.0"
authors = ["Joseph Nusairat <joseph@nusairat.com>"]
edition = "2018"

[features]
default = ["full"]
full = []
ch02 = []

[dependencies]
# Loggers
log = "0.4.11"
pretty_env_logger = "0.4"
env_logger = "0.8.2"

iron = "0.6.1"
router = "0.6.0"
mount = "0.4.0"
# abilityto easily parse parameters
params = "0.8.0"

# Hyper is in iron
hyper = "0.13.9"

# Conver for easy slash use
path-slash = "0.1.3"

# For S3
#rusoto_s3 = "0.37.0"

# tag::multipart[]
# For file uploading
multipart = { version = "0.17.0", features = ["iron"] }
# end::multipart[]

# For error chaining
error-chain = "0.12.4"

# Uuid creation
## Serde needed for the parsers
uuid = { version =  "0.8.1", features = ["serde", "v4"] }

# Sendign requests
# tag::reqwest[]
reqwest = {version =  "0.10.9", features = ["blocking", "json"] }
http = "0.2.0"
# end::reqwest[]

# Our serializers / deserializers for the JSON creation
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }

## Parsing
# tag::image[]
kamadak-exif = "0.5.2"
chrono = { version = "0.4.19", features = ["serde"] }
# end::image[]
# tag::video[]
mp4parse = "=0.11.2"
# end::video[]

# Used for Argument Matching And Applications
clap = "2.33.3"